--- a/prices.html
+++ b/prices.html
@@ -22,7 +22,8 @@
         }
 
         tr,
-        td {
+        td,
+        th {
             text-align: start;
         }
     </style>
@@ -36,9 +37,9 @@
             prices.sort((a, b) => {
                 return a.name < b.name ? -1 : (a.name > b.name ? 1 : 0);
             });
-            let table = "<table>";
+            let table = "<table><tr><th>שם</th><th>מחיר</th><th>חברה</th><th>מדינה</th></tr>";
             for (const price of prices) {
-                table += "<tr><td>" + price.name + "</td><td>" + price.price + "</td></tr>";
+                table += "<tr><td>" + price.name + "</td><td>" + price.price + "</td><td>" + price.manufacturer_name + "</td><td>" + price.manufacture_country + "</td></tr>";
             }
             table += "<table>";
             $("#content").append(table).show();
