Better link for chains with a single subchain

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                             }
                             p.append(sublist);
                         } else {
-                            $('<a>').attr("href", "AAA").text(chain_text).appendTo(p);
+                            $('<a>').attr("href", "stores.html?chain_id=" + chain_id
+                                + "&chain_name=" + chain_value.name
+                                + "&subchain_id=" + chain_value.subchains[0].id
+                                + "&subchain_name=" + chain_value.subchains[0].name).text(subchain.name + " - (" + subchain.id + ")").text(chain_text).appendTo(p);
 
                         }
                         div.append(p);
