--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             $('<a>').attr("href", "stores.html?chain_id=" + chain_id
                                 + "&chain_name=" + chain_value.name
                                 + "&subchain_id=" + chain_value.subchains[0].id
-                                + "&subchain_name=" + chain_value.subchains[0].name).text(subchain.name + " - (" + subchain.id + ")").text(chain_text).appendTo(p);
+                                + "&subchain_name=" + chain_value.subchains[0].name).text(chain_text).appendTo(p);
 
                         }
                         div.append(p);
