--- a/prices.html
+++ b/prices.html
@@ -9,10 +9,13 @@
 
     <!-- Used for CSV parsing-->
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+    <script src="fast-filter/filter-table.min.js"></script>
+
     <link rel="stylesheet" href="https://raw.githack.com/waldyrious/downstyler/master/downstyler.css" />
 
     <style>
-        #content {
+        #page {
             direction: rtl;
         }
 
@@ -32,17 +35,19 @@
     <script>
         function showPrices(prices_csv, chain_id, chain_name, subchain_id, subchain_name, store_id, store_name) {
             const prices = d3.csvParse(prices_csv);
-            $("#title").text(store_name + " - " + subchain_name).show();
-            $("#subtitle").text(" (של רשת " + chain_name + ")").show();
+            $("#title").text(store_name + " - " + subchain_name);
+            $("#subtitle").text(" (של רשת " + chain_name + ")");
             prices.sort((a, b) => {
                 return a.name < b.name ? -1 : (a.name > b.name ? 1 : 0);
             });
-            let table = "<table><tr><th>שם</th><th>מחיר</th><th>חברה</th><th>מדינה</th></tr>";
+            let table = "<table id='data-table'><tr><th>שם</th><th>מחיר</th><th>חברה</th><th>מדינה</th></tr>";
             for (const price of prices) {
-                table += "<tr><td>" + price.name + "</td><td>" + price.price + "</td><td>" + price.manufacturer_name + "</td><td>" + price.manufacture_country + "</td></tr>";
+                table += "<tr class='data-row'><td>" + price.name + "</td><td>" + price.price + "</td><td>" + price.manufacturer_name + "</td><td>" + price.manufacture_country + "</td></tr>";
             }
             table += "<table>";
-            $("#content").append(table).show();
+            $("#content").append(table);
+            $('#data-table').filterTable('#search');
+            $("#page").show();
 
         }
         $(document).ready(() => {
@@ -66,9 +71,15 @@
 </head>
 
 <body>
-    <h1 id="title" style="display: none;"></h1>
-    <h3 id="subtitle" style="display: none;"></h3>
-    <div id="content" style="display: none;"></div>
+    <div id="page" style="display: none;">
+        <h1 id="title"></h1>
+        <h3 id="subtitle"></h3>
+        <div id="search_container">
+            <input type="text" id="search" placeholder="חפש..">
+        </div>
+        <div id="content">
+        </div>
+    </div>
 </body>
 
 </html>
