--- a/stores.html
+++ b/stores.html
@@ -75,7 +75,7 @@
 
         }
 
-        const data_url = 'https://olivierh.github.io/israel-prices-data/'
+        const data_url ='https://oracle.hofman.quest/files/';
 
         $(document).ready(() => {
             const query = window.location.href;
