--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         $(document).ready(() => {
             console.log("ready");
 
-            const data_url = 'https://oracle.hofman.quest/files/"'
+            const data_url = 'https://oracle.hofman.quest/files/'
 
             const catalog_url = data_url + "catalog.json"
             const chains_url = data_url + "chains.csv"
