--- a/all_products.html
+++ b/all_products.html
@@ -33,16 +33,14 @@
 
 
     <script>
-        function showPrices(prices_csv, chain_id, chain_name, subchain_id, subchain_name, store_id, store_name) {
-            const prices = d3.csvParse(prices_csv);
-            $("#title").text(store_name + " - " + subchain_name);
-            $("#subtitle").text(" (של רשת " + chain_name + ")");
-            prices.sort((a, b) => {
+        function showProducts(products_csv) {
+            const products = d3.csvParse(products_csv);
+            products.sort((a, b) => {
                 return a.name < b.name ? -1 : (a.name > b.name ? 1 : 0);
             });
-            let table = "<table id='data-table'><tr><th>שם</th><th>מחיר</th><th>חברה</th><th>מדינה</th></tr>";
-            for (const price of prices) {
-                table += "<tr class='data-row'><td>" + price.name + "</td><td>" + price.price + "</td><td>" + price.manufacturer_name + "</td><td>" + price.manufacture_country + "</td></tr>";
+            let table = "<table id='data-table'><tr><th>שם</th><th>חברה</th><th>מדינה</th></tr>";
+            for (const product of products) {
+                table += "<tr class='data-row'><td>" + product.name + "</td><td>" + product.manufacturer_name + "</td><td>" + product.manufacture_country + "</td></tr>";
             }
             table += "<table>";
             $("#content").append(table);
@@ -53,8 +51,8 @@
         $(document).ready(() => {
 
             const data_url = 'https://oracle.hofman.quest/files/';
-            $.get(data_url + 'prices/' + chain_id + "_" + store_id + ".csv").then((stores) => {
-                showPrices(stores, chain_id, chain_name, subchain_id, subchain_name, store_id, store_name);
+            $.get(data_url + 'products.csv').then((products) => {
+                showProducts(products);
             });
         });
 
@@ -63,9 +61,9 @@
 </head>
 
 <body>
+    <h1 id="title">כל המוצרים בישראל</h1>
+
     <div id="page" style="display: none;">
-        <h1 id="title"></h1>
-        <h3 id="subtitle"></h3>
         <div id="search_container">
             <input type="text" id="search" placeholder="חפש..">
         </div>
