--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <body>
     <h1>Israel Prices</h1>
 
+    <p><a href="all_products.html">All Products</a></p>
     <div id="chains" style="display: none;">
     </div>
     <div id="stores" style="display: none;">
